# rules-py-2283

./: BUILD.bazel  MODULE.bazel  README.md  pre_commit_wrapper.py  requirements.txt
tools/: bazel
