load("@rules_uv//uv:pip.bzl", "pip_compile")
load("@rules_python//python:defs.bzl", "py_binary")

pip_compile(
    name = "requirements",
    requirements_in = "//:requirements.in", # default
    requirements_txt = "//:requirements.txt", # default
)

py_binary(
    name = "precommit",
    srcs = ["pre_commit_wrapper.py"],
    main = "pre_commit_wrapper.py",
    deps = [
        "@pypi//pre_commit",
    ],
)
